nav bar name changed to Weifan's stock simulator

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">W</span><span class="red">e</span><span class="yellow">i</span><span class="green">f</span><span class="blue">a</span><span class="red">n</span><span class="green">'s</span><span></span><span class="red">Stock Simulator</span></a>
+                <a class="navbar-brand" href="/"><span class="blue">W</span><span class="red">e</span><span class="yellow">i</span><span class="green">f</span><span class="blue">a</span><span class="red">n</span><span class="green">'s </span><span class="red">Stock Simulator</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
